--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 
 <style>
-    p{
-        color:#0000ff;
+    body{
+        background-color:#e6bc22;
         font-family: Roboto;
+    }
+    h1{
+        color:#0000ff;
         font-size: 64px;
         text-align: center;
+        font-weight: 300;
+        text-transform: capitalize;
+    }
+    h2 {
+        color: #000000;
+        font-size: 32px;
+        text-align: center;
+        text-transform: capitalize;
+    }
+    .red {
+        color: #ff0000;
+    }
+    #content {
+        background-color: white;
+        color: #000000;
+        font-size: 18px;
+        margin: 40px;
+        padding: 20px 20px 20px 20px;
+        border: 10px solid black;
+        text-align: left;
     }
 </style>
 <html lang="en">
@@ -14,6 +37,15 @@
   <title>My Website</title>
 </head>
 <body>
-    <p>Welcome To My Website!</p>
+    <h1>Welcome To My Website!</h1>
+    <h1 class="red">Happy to have you here!</h1>
+    <div id="content">
+    <h2>A Little motivation</h2/>
+    <p>These words are written with love and satisfaction,
+    I'm trying my best possible to make a fully functional and
+    operational website
+    , but it's not that easy at all and it needs patience</p>
+    </div>
+    <!--<div>but not this one</div>*/-->
 </body>
 </html>
