--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 
 <style>
+    body{
+        background-color:#e6bc22
+    }
     p{
         color:#0000ff;
         font-family: Roboto;
         font-size: 64px;
         text-align: center;
+    }
+    .red {
+        color: #ff0000;
+    }
+    div#content {
+        background-color: white;
+        color: #000000;
+        font-family: Roboto;
+        font-size: 18px;
+        margin: 40px;
+        padding: 20px 0px 400px 20px ;
+        border: 10px solid black;
+        text-align:left;
     }
 </style>
 <html lang="en">
@@ -15,5 +31,8 @@
 </head>
 <body>
     <p>Welcome To My Website!</p>
+    <p class="red">These Words Are Red</p>
+    <div id="content">These words are written with love and satisfaction</div>
+    <!--<div>but not this one</div>*/-->
 </body>
 </html>
