--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
     <div id="content">
     <h2>A Little motivation</h2/>
     <p>These words are written with love and satisfaction,
-    I'm trying my best possible to make a fudsertrlly functional and
+    I'm trying my best possible to make a fully functional and
     operational website
     , but it's not that easy at all and it needs patience</p>
     </div>
