--- a/site/index.html
+++ b/site/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
-  <meta charset="utf-8">
-  <title>My Website</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Website</title>
 </head>
 <body>
     <h1>Welcome To My Website!</h1>
     <h1 class="red">Happy to have you here!</h1>
-    <div id="content">
-    <h2>A Little motivation</h2/>
-    <p>These words are written with love and satisfaction,
-    I'm trying my best possible to make a fully functional and
-    operational website
-    , but it's not that easy at all and it needs patience</p>
+    <div>
+        <div>Hi</div>
+        <div>Hello</div>
+        <div>Bye</div>
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
