--- a/site/index.html
+++ b/site/index.html
@@ -8,10 +8,12 @@
     <title>My Website</title>
 </head>
 <body>
-    <div>
-        <div>Hi</div>
-        <div>Hello</div>
-        <div>Bye</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-lg-6 col-sm-3">Hi</div>
+            <div class="col-md-4 col-lg-6 col-sm-3">Hello</div>
+            <div class="col-md-4 col-lg-6 col-sm-3">Bye</div>
+        </div>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
