--- a/site/index.html
+++ b/site/index.html
@@ -10,9 +10,18 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4 col-lg-6 col-sm-3">Hi</div>
-            <div class="col-md-4 col-lg-6 col-sm-3">Hello</div>
-            <div class="col-md-4 col-lg-6 col-sm-3">Bye</div>
+            <div class="col-md-4 col-lg-3 col-sm-6 col-xs-6">Hi</div>
+            <div class="col-md-4 col-lg-3 col-sm-6 col-xs-6">Hello</div>
+            <div class="col-md-4 col-lg-3 col-sm-6 col-xs-6">Bye</div>
+            <div class="col-md-4 col-lg-3 col-sm-6 col-xs-6">Goodbye</div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-lg-3 col-sm-6 col-xs-6">Hi</div>
+            <div class="col-md-4 col-lg-3 col-sm-6 col-xs-6">Hello</div>
+            <div class="col-md-4 col-lg-3 col-sm-6 col-xs-6">Bye</div>
+            <div class="col-md-4 col-lg-3 col-sm-6 col-xs-6">Goodbye</div>
         </div>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
